# cpp-template-project

./: .gitmodules  CMakeLists.txt  Makefile
app/factorial/: CMakeLists.txt
app/factorial/src/: Mainwindow.cpp  Mainwindow.hpp  main.cpp
app/factorial/test/: Mainwindow.test.cpp  tests.cpp
cmake/: Catch.cmake  ClangTools.cmake  GitDescribe.cmake  Trompeloeil.cmake
lib/factorial/: CMakeLists.txt  factorial.hpp
lib/factorial/test/: CMakeLists.txt  factorial.test.cpp
src/: CMakeLists.txt  Mainwindow.cpp  Mainwindow.hpp
